디버깅 로그 삭제 및 아이콘 변경

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CompValue</title>
+
+  <!-- SEO Meta Tags -->
+  <title>CompValue - 기업가치 분석 플랫폼</title>
+  <meta name="description" content="주식의 내재가치를 정량적으로 평가하고, 기업의 성장성과 밸류에이션을 시각적으로 비교하는 플랫폼입니다. PER, PEG, ROE 등 다양한 지표를 활용하여 합리적인 투자 의사결정을 지원합니다." />
+  <meta name="keywords" content="기업가치, 주식분석, 밸류에이션, PER, PEG, ROE, 투자분석, 주식투자, 내재가치" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="CompValue - 기업가치 분석 플랫폼" />
+  <meta property="og:description" content="주식의 내재가치를 정량적으로 평가하고, 기업의 성장성과 밸류에이션을 시각적으로 비교하는 플랫폼" />
+  <meta property="og:image" content="/favicon.svg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="CompValue - 기업가치 분석 플랫폼" />
+  <meta name="twitter:description" content="주식의 내재가치를 정량적으로 평가하고, 기업의 성장성과 밸류에이션을 시각적으로 비교하는 플랫폼" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#3b82f6" />
 </head>
 
 <body>
